--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Datasets/Hour of Code/.DS_Store
 Datasets/Hour of Code/__pycache__
 .idea
 Datasets/Hour of Code/hoare_triples
+__pycache__/
+Datasets/Hour of Code/tfrecords/
