--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-Datasets/Hour of Code/hoc4
-Datasets/Hour of Code/hoc18
-Datasets/Pix2Code/
-Datasets/Hour of Code/.DS_Store
-Datasets/Hour of Code/__pycache__
-.idea
-Datasets/Hour of Code/hoare_triples
-__pycache__/
-Datasets/Hour of Code/tfrecords/
+Datasets/
+.idea/
